# krra-race-series

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  agents.md  codecov.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: snyk_rules.instructions.md
.github/scripts/: check_python_eol.py
.github/workflows/: ci.yml  codeql.yml  python-version-check.yml
data/members/: members.csv
data/race_results/: charity_8k.csv  county_half_marathon.csv  fall_10k.csv  spring_5k.csv  summer_8k.csv  winter_5k.csv
docs/: PYTHON_VERSION_MANAGEMENT.md
src/krra_race_series/: __init__.py  age_grading.py  cli.py  export.py  matching.py  members.py  race_results.py  scoring.py
tests/: conftest.py  test_age_grading.py  test_cli.py  test_export.py  test_matching.py  test_members.py  test_race_results.py  test_scoring.py
